Added class for making smaller divs dark

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,11 @@
     border: black 1px solid;
     margin: auto;
 }
+
+.box {
+    background-color: white;
+}
+
+.dark {
+    background-color: black;
+}
