--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,49 @@
+body,
+html {
+  font-family: Roboto;
+}
+
 .container {
-    display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
-    width: 460px;
-    height: 460px;
-    border: black 1px solid;
-    margin: auto;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  width: 60vw;
+  height: 60vh;
+  border: black 1px solid;
+  margin: auto;
+  margin-top: 100px;
 }
 
 .box {
-    background-color: white;
+  background-color: white;
 }
 
 .dark {
-    background-color: black;
+  background-color: black;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+}
+
+#new-grid {
+  background-color: rgb(0, 153, 255);
+  color: white;
+  padding: 12px;
+  border-radius: 4px;
+}
+
+#new-grid:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+h1 {
+  text-align: center;
+}
+
+.label {
+  text-align: center;
+  text-decoration: underline;
 }
